# web-publishing-examples

./: .gitignore  LICENSE  index.html
csr/: index.html  main.js
csr-framework/: index.html  main.js  useSimulationState.js
csr-iframe/: index.html  main-iframe.js
html/: index.html
ssr/: Cargo.toml
ssr/src/: main.rs
ssr/templates/: rt.html
