[package]
name = "ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.8.1"
csv = "1.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version =  "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
